<resources>
    <string name="app_name">Discover Tunisia</string>
    <string name="facebook_app_id" translatable="false">625561951606349</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb625561951606349</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="true">Hello blank fragment</string>
    <string name="email" translatable="true">Email</string>
    <string name="hiden_password" translatable="true">*******</string>
    <string name="forget_yout_password" translatable="true">Forget yout password ?</string>
    <string name="sign_in" translatable="true">Sign In</string>
    <string name="continue_with_facebook" translatable="true">Continue With Facebook</string>
    <string name="langues" translatable="true">Langues</string>
    <string name="register_account" translatable="true">Register Account</string>
    <string name="skip" translatable="true">SKIP</string>
    <string name="full_name" translatable="true">Full Name</string>
    <string name="password" translatable="true">Password</string>
    <string name="continue_" translatable="true">Continue</string>
    <string name="view_terms_and_conditions" translatable="true">View Terms and Conditions</string>
    <string name="back" translatable="true">back</string>
    <string name="la_une" translatable="true">Featured</string>
    <string name="actualit_s" translatable="true">News</string>
    <string name="mon_s_jour" translatable="true">My stay</string>

    <string name="param_tres" translatable="true">Settings</string>
    <string name="open" translatable="true">open</string>
    <string name="close" translatable="true">close</string>
    <string name="la_plage" translatable="true">To the beach</string>
    <string name="tour_de_tunisie_des_plages" translatable="true">Tunisia Beach Tour</string>
    <string name="animation_non_stop" translatable="true">Non stop animation</string>
    <string name="les_les" translatable="true">The islands</string>
    <string name="tunisie" translatable="true">Tunisie</string>
    <string name="discover_now" translatable="true">Discover now</string>
    <string name="tabarka" translatable="true">Tabarka</string>
    <string name="read_more" translatable="true">read more</string>
    <string name="next" translatable="true">Next</string>
    <string name="d_connexion" translatable="true">Sign Out</string>
    <string name="search" translatable="true">Search</string>
    <string name="les_incontournables" translatable="true">The unavoidable</string>
    <string name="choose_filtre" translatable="true">To choose…</string>
    <string name="title_activity_maps" translatable="true">Map</string>
    <string name="events" translatable="true">Events</string>
    <string name="photos" translatable="true">Photos</string>
    <string name="videos" translatable="true">Videos</string>
    <string name="visit_virtuel" translatable="true">Virtual visit</string>
    <string name="empty_data" translatable="true">Empty data</string>
    <string name="connect" translatable="true">Connect</string>
    <string name="city" translatable="false">Cité</string>
    <string name="phone" translatable="false">Téléphone</string>
    <string name="adress" translatable="false">Adresse</string>
    <string name="description" translatable="false">Description</string>
</resources>
