<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".login.fragment.CreateAccountFragment">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/inspring_logo"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:layout_marginTop="45dp"
        tools:ignore="ContentDescription" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/full_name"
        android:id="@+id/et_fullname"
        android:layout_marginTop="40dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingStart="10dp"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:textColorHint="@color/colorPrimaryLight"
        android:background="@drawable/shape_blue_light_border_5dp"
        tools:ignore="Autofill,RtlSymmetry,TextFields" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:id="@+id/et_email"
        android:inputType="textEmailAddress"
        android:layout_marginTop="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingStart="10dp"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:textColorHint="@color/colorPrimaryLight"
        android:background="@drawable/shape_blue_light_border_5dp"
        tools:ignore="Autofill,RtlSymmetry,TextFields" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:id="@+id/et_password"
        android:inputType="textPassword"
        android:layout_marginTop="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingStart="10dp"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:textColorHint="@color/colorPrimaryLight"
        android:background="@drawable/shape_blue_light_border_5dp"
        tools:ignore="Autofill,RtlSymmetry,TextFields" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="45dp"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="40dp"
        android:text="@string/continue_"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:gravity="center"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textAllCaps="true"
        android:background="@drawable/shape_second_color_border_5dp"
        android:id="@+id/tv_sigin"/>




    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_terms_and_conditions"
        android:textAllCaps="true"
        android:id="@+id/tv_view_terms"
        android:layout_marginTop="40dp"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/colorPrimaryLight"
        tools:ignore="RelativeOverlap" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:textAllCaps="true"
        android:id="@+id/tv_back"
        android:layout_marginTop="40dp"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/colorPrimaryLight"
        tools:ignore="RelativeOverlap" />


</LinearLayout>