<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".login.fragment.LoginFragment">
<ImageView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:src="@drawable/inspring_logo"
    android:layout_marginLeft="45dp"
    android:layout_marginRight="45dp"
    android:layout_marginTop="45dp"
    tools:ignore="ContentDescription" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:id="@+id/et_email"
        android:layout_marginTop="40dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingStart="10dp"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:textColorHint="@color/colorPrimaryLight"
        android:background="@drawable/shape_blue_light_border_5dp"
        tools:ignore="Autofill,RtlSymmetry,TextFields" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hiden_password"
        android:id="@+id/et_password"
        android:layout_marginTop="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingStart="10dp"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:textColorHint="@color/colorPrimaryLight"
        android:background="@drawable/shape_blue_light_border_5dp"
        tools:ignore="RtlSymmetry,TextFields" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:id="@+id/tv_forgot_password"
        android:layout_marginRight="45dp"
        android:layout_marginTop="25dp"
        android:textColor="@color/colorPrimaryLight"
        android:text="@string/forget_yout_password"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="45dp"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="40dp"
        android:text="@string/sign_in"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:gravity="center"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textAllCaps="true"
        android:background="@drawable/shape_second_color_border_5dp"
        android:id="@+id/tv_sigin"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layout_facebook"
        android:orientation="horizontal"
        android:layout_marginStart="45dp"
        android:layout_marginEnd="45dp"
        android:layout_marginTop="15dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:gravity="center"
        android:background="@drawable/shape_blue_color_border_5dp">
    <ImageView
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:background="@drawable/fb"
        tools:ignore="ContentDescription,RtlHardcoded"
        android:layout_marginRight="5dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:textSize="20sp"
        android:text="@string/continue_with_facebook"
        android:textColor="@color/white"/>
    </LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:layout_marginTop="15dp">

        <LinearLayout
            android:id="@+id/layout_select_language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="0dp"
            android:background="@drawable/shape_blue_light_border_5dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="5dp"
            tools:ignore="UselessParent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/langues"
                android:textColor="@color/colorPrimaryLight" />

            <ImageView
                android:layout_width="12dp"
                android:layout_height="12dp"
                android:layout_marginStart="3dp"
                android:src="@drawable/arrow_bottom"
                tools:ignore="ContentDescription" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/register_account"
            android:textAllCaps="true"
            android:layout_centerVertical="true"
            android:textColor="@color/colorPrimary"
            tools:ignore="RelativeOverlap"
            android:id="@+id/tv_create_account"/>

    </RelativeLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/skip"
        android:textAllCaps="true"
        android:id="@+id/tv_skip"
        android:layout_marginTop="40dp"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/colorPrimaryLight"
        tools:ignore="RelativeOverlap" />


</LinearLayout>