<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".drawers.BookMarkFragment">

    <ImageView
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/ic_back_blue"
        android:id="@+id/iv_back"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        tools:ignore="ContentDescription" />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:id="@+id/nested"
        android:layout_below="@+id/iv_back">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        >
        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layout_event"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        tools:ignore="UselessParent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/events"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_height="wrap_content" />
    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"
        android:id="@+id/rv_events"
        android:nestedScrollingEnabled="false"/>
    </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/layout_photo"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            tools:ignore="UselessParent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/photos"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_height="wrap_content" />
            <android.support.v7.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:nestedScrollingEnabled="false"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:id="@+id/rv_photo" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/layout_video"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            tools:ignore="UselessParent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/videos"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_height="wrap_content" />
            <android.support.v7.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content"
                android:id="@+id/rv_video"
                android:layout_marginStart="16dp"
                android:nestedScrollingEnabled="false"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/layout_360"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            tools:ignore="UselessParent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/visit_virtuel"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_height="wrap_content" />
            <android.support.v7.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content"
                android:id="@+id/rv_360"
                android:layout_marginStart="16dp"
                android:nestedScrollingEnabled="false"/>
        </LinearLayout>
    </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
<ProgressBar
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true"
    android:id="@+id/progress_bar"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/empty_data"
        android:visibility="gone"
        android:id="@+id/tv_empty_data"/>

</RelativeLayout>